k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: tam-dashboard
spec:
  selector:
    app: dashboard
  ports:
    - name: frontend
      port: 80
      targetPort: 80
    - name: proxy
      port: 3001
      targetPort: 3001
  type: ClusterIP
